# rag_book

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: .instructions.md  rag_book.instructions.md  scripts.instructions.md
.github/prompts/: finish-feature.md
.github/skills/explore/: SKILL.md
.github/skills/gather-context/: SKILL.md
.github/skills/multi-agent-workflow/: SKILL.md
.github/skills/summarize/: SKILL.md
rag_book/: __init__.py  agent.py  config.py  engine.py  index.py  ingest.py  pdf_loader.py  references.py  session.py
scripts/: ingest.py
