[project]
name = "rag-book"
version = "0.1.0"
description = "Agentic RAG over a personal library of PDF books, powered by Claude."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "llama-index-core>=0.12.0",
    "llama-index-llms-openai-like>=0.3.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-retrievers-bm25>=0.5.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=3.0.0",
    "streamlit>=1.39.0",
    "python-dotenv>=1.0.0",
    "torchvision>=0.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rag_book"]
